# magic-agents

./: .gitignore  0001-feat-implement-Epics-2-6-with-full-negotiation-spec-.patch  CHECKPOINT_FEATURE.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  PLAYBOOK.md  README.md  SCHEDULED_TASK_REPORT.md  SPEC_DIFF_USAGE.md  ac-input.yaml  ac-to-specs-plan.md  ac-to-specs-plan2.md  agent-skills-reference.md  api-endpoints.yaml  bullet-tracer.md  codebase-index.yaml  constitution.yaml  epic-4-6.bundle  epic-4-6.patch  epic-4-skill-routing.patch  hackathon-roadmap.md  harness-state.yaml  jira-api-payloads.yaml  jira-evidence-comment.wiki  phase-outputs.json  phases-5-6-7.patch  pyproject.toml  reference-library.md  run_negotiation.py  run_web.py  skill-interface.yaml  spec.yaml  specify-feature-types.md  specify-production-spec.md  user-stories.md
docs/: DESIGN.md
dog-service/: build.gradle
epic-4-changes/: test_pytest_skill.py  test_skill_framework.py  test_tag_enforcer.py  verify-pytest-SKILL.md
specs/: DEV-1.yaml  DEV-17.yaml  SSE-TEST.yaml  TEST-WEB.yaml
static/: index.html
tests/: test_backpressure.py  test_bootstrap_graph.py  test_checkpoint.py  test_checkpoint_web.py  test_cli.py  test_command_routing.py  test_cucumber_pipeline.py  test_dummy_app.py  test_e2e_pipeline.py  test_evaluator_optimizer.py  test_explorer_cli_web.py  test_explorer_constitution.py  test_explorer_context_injection.py  test_explorer_detect.py  test_explorer_index.py  test_frontend_foundation.py  test_gherkin_integration.py  test_hook_event_system.py  test_jira_feedback.py  (+26 more)
(+378 files in other folders)
