[project]
name = "magic-agents"
version = "0.1.0"
description = "Intent-to-Verification Spec Engine"
requires-python = ">=3.10"
dependencies = [
    "anthropic",
    "fastapi",
    "uvicorn",
    "requests",
    "pyyaml",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "httpx",
    "pyyaml",
]

[project.scripts]
specify = "verify.cli:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
